${params.name}/${params.manifest-name}/base/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${params.name}
  namespace: app
spec:
  hostnames:
    - ${params.name}.bei.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: istio-system
  rules:
    - backendRefs:
        - name: ${params.name}
          namespace: app
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
